modules/xcm-interface/src/snapshots/module_xcm_interface__tests__build_transfer_to_liquid_crowdloan_module_account_kusama.snap
---
source: modules/xcm-interface/src/tests.rs
expression: xcm
---
Xcm(
    [
        WithdrawAsset(
            MultiAssets(
                [
                    MultiAsset {
                        id: Concrete(
                            MultiLocation {
                                parents: 0,
                                interior: Here,
                            },
                        ),
                        fun: Fungible(
                            0,
                        ),
                    },
                ],
            ),
        ),
        BuyExecution {
            fees: MultiAsset {
                id: Concrete(
                    MultiLocation {
                        parents: 0,
                        interior: Here,
                    },
                ),
                fun: Fungible(
                    0,
                ),
            },
            weight_limit: Unlimited,
        },
        Transact {
            origin_kind: SovereignAccount,
            require_weight_at_most: Weight {
                ref_time: 0,
                proof_size: 0,
            },
            call: "0x1e0000010101010101010101010101010101010101010101010101010101010101010100630803000100411f03000101000202020202020202020202020202020202020202020202020202020202020202030400000000070010a5d4e80000000000",
        },
        RefundSurplus,
        DepositAsset {
            assets: Wild(
                AllCounted(
                    1,
                ),
            ),
            beneficiary: MultiLocation {
                parents: 0,
                interior: X1(
                    Parachain(
                        2000,
                    ),
                ),
            },
        },
    ],
)
