modules/xcm-interface/src/snapshots/module_xcm_interface__tests__build_transfer_to_liquid_crowdloan_module_account_polkadot.snap
---
source: modules/xcm-interface/src/tests.rs
expression: xcm
---
Xcm(
    [
        WithdrawAsset(
            MultiAssets(
                [
                    MultiAsset {
                        id: Concrete(
                            MultiLocation {
                                parents: 0,
                                interior: Here,
                            },
                        ),
                        fun: Fungible(
                            0,
                        ),
                    },
                ],
            ),
        ),
        BuyExecution {
            fees: MultiAsset {
                id: Concrete(
                    MultiLocation {
                        parents: 0,
                        interior: Here,
                    },
                ),
                fun: Fungible(
                    0,
                ),
            },
            weight_limit: Unlimited,
        },
        Transact {
            origin_kind: SovereignAccount,
            require_weight_at_most: Weight {
                ref_time: 0,
                proof_size: 0,
            },
            call: [
                29,
                0,
                0,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                1,
                0,
                99,
                8,
                3,
                0,
                1,
                0,
                65,
                31,
                3,
                0,
                1,
                1,
                0,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                2,
                3,
                4,
                0,
                0,
                0,
                0,
                7,
                0,
                16,
                165,
                212,
                232,
                0,
                0,
                0,
                0,
                0,
            ],
        },
        RefundSurplus,
        DepositAsset {
            assets: Wild(
                AllCounted(
                    1,
                ),
            ),
            beneficiary: MultiLocation {
                parents: 0,
                interior: X1(
                    Parachain(
                        2000,
                    ),
                ),
            },
        },
    ],
)
